--- a/crud/templates/crud/header.html
+++ b/crud/templates/crud/header.html
@@ -7,12 +7,12 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#">{{ settings.logo|safe }}</a>
+			<a class="navbar-brand" href="#">{{ settings.navbar_logo|safe }}</a>
 		</div>
 		
 		<div class="navbar-collapse collapse" id="topnavbar-collapse">
 			<ul class="nav navbar-nav">
-				{{ settings.navbar|safe }}
+				{{ settings.navbar_menu|safe }}
 			</ul>
 		
 			<ul class="nav navbar-nav navbar-right">
