--- a/crud/templates/crud/widget/list.html
+++ b/crud/templates/crud/widget/list.html
@@ -6,7 +6,7 @@
 	Parameters:
 		object_list				Collection of objects to present in the panels (e.g. queryset or list)
 
-		attributes.class		Table class. Default is empty
+		attributes.class		Topmost class. Default is empty
 
 		attributes.text 		Display a paragraph of text (usually instructions and help)
 		
@@ -23,18 +23,18 @@
 
 
 {% if attributes.text %}
-	{% include "crud/text_widget.html" with text=attributes.text %}
+	{% include "crud/widget/text.html" with text=attributes.text %}
 {% endif %}
 
 {% if attributes.links %}
-	{% include "crud/links_widget.html" with links=attributes.links %}
+	{% include "crud/widget/links.html" with links=attributes.links %}
 {% endif %}
 
 
-<div class="{% if attributes.class %}{{ attributes.class }}{% endif %}">
+<div {% if attributes.class %}class="{{ attributes.class }}"{% endif %}>
 
 	{% for panel in object_list %}
-		<h3>{{ panel.label|title }}</h3>
+		<h3>{{ panel.label }}</h3>
 		
 		{% include panel.widget with object_list=panel.object_list attributes=panel.attributes %}	    
 
