--- a/crud/templates/crud/widget/panels.html
+++ b/crud/templates/crud/widget/panels.html
@@ -21,11 +21,11 @@
 
 
 {% if attributes.text %}
-	{% include "crud/text_widget.html" with text=attributes.text %}
+	{% include "crud/widget/text.html" with text=attributes.text %}
 {% endif %}
 
 {% if attributes.links %}
-	{% include "crud/links_widget.html" with links=attributes.links %}
+	{% include "crud/widget/links.html" with links=attributes.links %}
 {% endif %}
 
 
