--- a/simplecrud/templates/simplecrud/base.html
+++ b/simplecrud/templates/simplecrud/base.html
@@ -25,7 +25,7 @@
 	{% if header_template %}
 		{% include header_template %}	
 	{% else %}
-		{% include 'crud/header.html' %}	
+		{% include 'simplecrud/header.html' %}	
 	{% endif %}
 	
     <div class="container">
@@ -42,7 +42,7 @@
 	{% if header_template %}
 		{% include header_template %}	
 	{% else %}
-		{% include 'crud/footer.html' %}
+		{% include 'simplecrud/footer.html' %}
 	{% endif %}
 
 {% endblock %}
