Fix include paths and add a top level div with configurable class

--- a/simplecrud/templates/simplecrud/widget/list.html
+++ b/simplecrud/templates/simplecrud/widget/list.html
@@ -23,11 +23,11 @@
 
 
 {% if attributes.text %}
-	{% include "crud/widget/text.html" with text=attributes.text %}
+	{% include "simplecrud/widget/text.html" with text=attributes.text %}
 {% endif %}
 
 {% if attributes.links %}
-	{% include "crud/widget/links.html" with links=attributes.links %}
+	{% include "simplecrud/widget/links.html" with links=attributes.links %}
 {% endif %}
 
 
