--- a/simplecrud/templates/simplecrud/widget/panels.html
+++ b/simplecrud/templates/simplecrud/widget/panels.html
@@ -4,14 +4,19 @@
 	Render object list as collapsible panels
 	
 	Parameters:
-		object_list		Collection of objects to render inside the panels (e.g. queryset or list)
+		object_list				Collection of objects to render inside the panels (e.g. queryset or list)
 		
+		attributes.class		Class attribute for wrapping div		
+		
+		attributes.panel_class	Default is "panel panel-default"
+
 		attributes.text 		Display a paragraph of text (usually instructions and help)
 		
 		attributes.links		Display link buttons above list. Sequence of sequences with 
 								(name,url,[arg0,arg1,...])
 		
 		Each item in the object_list can then have the following parameters:
+		
 			label			name of child object to display in panel title bar
 			widget			widget for rendering children objects inside panel
 			object_list		passed to widget as 'object_list'
@@ -20,29 +25,33 @@
 {% endcomment %}
 
 
-{% if attributes.text %}
-	{% include "crud/widget/text.html" with text=attributes.text %}
-{% endif %}
+<div {% if attributes.class %}class="{{ attributes.class }}"{% endif %}>
 
-{% if attributes.links %}
-	{% include "crud/widget/links.html" with links=attributes.links %}
-{% endif %}
+	{% if attributes.text %}
+		{% include "simplecrud/widget/text.html" with text=attributes.text %}
+	{% endif %}
+	
+	{% if attributes.links %}
+		{% include "simplecrud/widget/links.html" with links=attributes.links %}
+	{% endif %}
+	
+	
+	<div class={% if attributes.panel_class %}{{ attributes.panel_class }}{% else %}"panel panel-default"{% endif %}>
+		{% for panel in object_list %}
+	  		<div class="panel-heading">
+	      		<h4 class="panel-title">
+	        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse_{{ panel.label|slugify }}">
+	      				{{ panel.label }}
+	        		</a>
+	      		</h4>
+	    	</div>
+	
+		    <div id="collapse_{{ panel.label|slugify }}" class="panel-collapse collapse">
+		    	<div class="panel-body">
+					{% include panel.widget with object_list=panel.object_list attributes=panel.attributes %}	    
+		      	</div>
+		    </div>
+		{% endfor %}
+	</div>		
 
-
-<div class="panel panel-default">
-	{% for panel in object_list %}
-  		<div class="panel-heading">
-      		<h4 class="panel-title">
-        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse_{{ panel.label|slugify }}">
-      				{{ panel.label }}
-        		</a>
-      		</h4>
-    	</div>
-
-	    <div id="collapse_{{ panel.label|slugify }}" class="panel-collapse collapse">
-	    	<div class="panel-body">
-				{% include panel.widget with object_list=panel.object_list attributes=panel.attributes %}	    
-	      	</div>
-	    </div>
-	{% endfor %}
-</div>		
+</div>
