--- a/simplecrud/templates/simplecrud/header.html
+++ b/simplecrud/templates/simplecrud/header.html
@@ -20,12 +20,12 @@
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Welcome {{ user }} <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="{% url 'logout' %}">Logout</a></li>
+							<li><a href="{% url 'account_logout' %}">Logout</a></li>
 						</ul>
 					</li>
 				{% else %}
-			    	<li><a href="{% url 'login' %}">Login</a></li>
-			    	<li><a href="{% url 'signup' %}">Signup</a></li>
+			    	<li><a href="{% url 'account_login' %}">Login</a></li>
+			    	<li><a href="{% url 'account_signup' %}">Signup</a></li>
 				{% endif %}
 			</ul>
 		  
