Remove URL resolution from the template, now needs to be done in view using reverse or reverse_lazy

--- a/simplecrud/templates/simplecrud/widget/links.html
+++ b/simplecrud/templates/simplecrud/widget/links.html
@@ -5,21 +5,15 @@
 	Display URL links
 	
 	Parameters:
-		links	A sequence of dicts with: name,url,[arg]
-		arg		A default argument to pass to the url link if the dict above doesn't provide it	
+		links	A sequence of dicts with: label,url
+		
 
 {% endcomment %}
 
 <ul class="nav nav-pills">
 	{% for lnk in links %}
 		<li>
-			{% if lnk.arg %}
-				<a href="{% url lnk.url lnk.arg %}" {% if lnk.class %}class="{{ lnk.class }}"{% endif %}>{{ lnk.label }}</a>
-			{% elif arg %}
-				<a href="{% url lnk.url arg %}" {% if lnk.class %}class="{{ lnk.class }}"{% endif %}>{{ lnk.label }}</a>
-			{% else %}
-				<a href="{% url lnk.url %}" {% if lnk.class %}class="{{ lnk.class }}"{% endif %}>{{ lnk.label }}</a>
-			{% endif %}
+			<a href="{{ lnk.url }}" {% if lnk.class %}class="{{ lnk.class }}"{% endif %}>{{ lnk.label }}</a>
 		</li>
 	{% endfor %}
 </ul>
