--- a/simplecrud/templates/simplecrud/widget/form.html
+++ b/simplecrud/templates/simplecrud/widget/form.html
@@ -1,21 +1,26 @@
 {% load bootstrap3 %}
 
 {% if attributes.text %}
-	{% include "crud/text_widget.html" with text=attributes.text %}
+	{% include "simplecrud/text_widget.html" with text=attributes.text %}
 {% endif %}
 
 {% if attributes.links %}
-	{% include "crud/links_widget.html" with links=attributes.links %}
+	{% include "simplecrud/links_widget.html" with links=attributes.links %}
 {% endif %}
 
 <form method="post" role="form" class="{% if attributes.class %}{{ attributes.class }}{% else %}form-horizontal{% endif %}">
 	{% csrf_token %}
 
     {% if next %}
-    	<div><input type="hidden" name="next" value="{{ next }}" /></div>
+    	<input type="hidden" name="next" value="{{ next }}" />
     {% endif %}
-    
+
+    {% if redirect_field_value %}
+        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+    {% endif %}
+      
     {% bootstrap_form form layout='horizontal' %}
+    
 	{% buttons submit="Save" layout='horizontal' %}
 		<button type="button" class="btn btn-default" onclick="history.back(-1)">Cancel</button>	
 	{% endbuttons %}
