Updates to header and footer. Navbar now includes a default admin link if user is staff

--- a/simplecrud/templates/simplecrud/footer.html
+++ b/simplecrud/templates/simplecrud/footer.html
@@ -1,6 +1,6 @@
 <p> </p>
 <footer class="footer">
 	<div class="panel-footer">
-		<p class="text-muted">{{ settings.copyright }}</p>
+		<p class="text-muted">{% include 'simplecrud/copyright.html' %}</p>
 	</div>
 </footer>
