Improve and simplify handling of boolean values. Add an option to disable displaying them as tick/cross icons (attributes.bool_as_icon set to False)

--- a/simplecrud/templates/simplecrud/widget/value.html
+++ b/simplecrud/templates/simplecrud/widget/value.html
@@ -1,13 +1,18 @@
-{% load bootstrap3 %}
 {% load crud_tags %}
 
-{% if value == "ICON:OK" %}
-	{% bootstrap_icon "ok" %}
 
-{% elif value == "ICON:REMOVE" %}
-	{% bootstrap_icon "remove" %}
+{% comment %}
+    Render single value or sequence (by recursion
+    
+    Parameters:
+        value                   Object to display        
+        value_widget            Widget to use for displaying values (self-refering generally)
+        
+{% endcomment %}
 
-{% elif value|is_sequence %}
+
+
+{% if value|is_sequence %}
 	<table class="table table-striped table-bordered table-condensed text-center small">
 	    {% for row in value %}
 		    <tr>
