--- a/simplecrud/templates/simplecrud/widget/vtable.html
+++ b/simplecrud/templates/simplecrud/widget/vtable.html
@@ -13,6 +13,11 @@
 		
 		attributes.table_class	Table class. Default is "table table-striped"
 
+        attributes.show_all     If False (default) do not display empty fields
+
+        attributes.bool_as_icon If True (default) boolean values are displayed as tick and 
+                                cross icons
+
 		attributes.text 		Display a paragraph of text (usually instructions and help)
 		
 		attributes.links		Display link buttons above list. Sequence of sequences with 
