--- a/simplecrud/templates/simplecrud/widget/vtable.html
+++ b/simplecrud/templates/simplecrud/widget/vtable.html
@@ -32,11 +32,11 @@
 <div {% if attributes.class %}class="{{ attributes.class }}"{% endif %}>
 
 	{% if attributes.text %}
-		{% include "simplecrud/text_widget.html" with text=attributes.text %}
+		{% include "simplecrud/widget/text.html" with object_list=attributes.text %}
 	{% endif %}
 	
 	{% if attributes.links %}
-		{% include "simplecrud/widget/links.html" with links=attributes.links %}
+		{% include "simplecrud/widget/links.html" with object_list=attributes.links %}
 	{% endif %}
 	
 	
