--- a/simplecrud/templates/simplecrud/widget/list.html
+++ b/simplecrud/templates/simplecrud/widget/list.html
@@ -14,7 +14,6 @@
 								(name,url,[arg0,arg1,...])
 		
 		Each item in the object_list can then have the following parameters:
-			label			name of child object to display in panel title bar
 			widget			widget for rendering children objects inside panel
 			object_list		passed to widget as 'object_list'
 			attributes		passed to widget as 'attributes'
@@ -22,21 +21,18 @@
 {% endcomment %}
 
 
-{% if attributes.text %}
-	{% include "simplecrud/widget/text.html" with text=attributes.text %}
-{% endif %}
-
-{% if attributes.links %}
-	{% include "simplecrud/widget/links.html" with links=attributes.links %}
-{% endif %}
-
-
 <div {% if attributes.class %}class="{{ attributes.class }}"{% endif %}>
 
-	{% for panel in object_list %}
-		<h3>{{ panel.label }}</h3>
-		
-		{% include panel.widget with object_list=panel.object_list attributes=panel.attributes %}	    
+    {% if attributes.text %}
+    	{% include "simplecrud/widget/text.html" with object_list=attributes.text %}
+    {% endif %}
+    
+    {% if attributes.links %}
+    	{% include "simplecrud/widget/links.html" with object_list=attributes.links %}
+    {% endif %}
+
+	{% for item in object_list %}
+		{% include item.widget with object_list=item.object_list attributes=item.attributes %}	    
 
 	{% endfor %}
 
