Fix missing'safe' template filter in the header menu

--- a/simplecrud/templates/simplecrud/header.html
+++ b/simplecrud/templates/simplecrud/header.html
@@ -16,7 +16,7 @@
 		
 			{% if simplecrud.navbar_menu %}
     			<ul class="nav navbar-nav">
-                    {{ simplecrud.navbar_menu }}
+                    {{ simplecrud.navbar_menu|safe }}
     			</ul>
             {% endif %}
             		
