test.html now assumes text is HTM-safe. Support empty settings.SIMPLECRUD

--- a/simplecrud/templates/simplecrud/widget/text.html
+++ b/simplecrud/templates/simplecrud/widget/text.html
@@ -11,7 +11,7 @@
 <div {% if attributes.class %}class="{{ attributes.class }}"{% endif %}>
 
     {% for obj in object_list %}
-        <p>{{ obj }}</p>
+        <p>{{ obj|safe }}</p>
     {% endfor %}	
 
 </div>
