Fix table for simple values (no metadata)

--- a/simplecrud/templates/simplecrud/widget/table.html
+++ b/simplecrud/templates/simplecrud/widget/table.html
@@ -7,8 +7,8 @@
 	Parameters:
 		object_list				Collection of objects to list (for example a queryset or list)
 		
-		value_widget			Widget to use for displaying values
-		
+        attributes.headings     List of headings
+        
 		attributes.class		Class attribute for wrapping div
 		
 		attributes.table_class	Table class. Default is "table table-striped table-condensed text-center"
@@ -18,9 +18,6 @@
 		attributes.links		Display link buttons above list. Sequence of sequences with 
 								(name,url,[arg0,arg1,...])
 		
-		attributes.item_links	Display link buttons with each item. Sequence of sequences 
-								with (name,url,[arg0,arg1,...]). First argument to the url is 
-								the item primary key and is automatically provided
 {% endcomment %}
 
 
@@ -38,33 +35,28 @@
 	
 		<table class={% if attributes.table_class %}{{ attributes.table_class }}{% else %}"table table-striped table-condensed text-center"{% endif %}>
 		
-		    <thead>
-		    	<tr>
-			    {% for name,value in object_list.0|field_titles_and_values:attributes %}
-		            <th class="text-center">{{ name|capfirst }}</th>
-		    	{% endfor %}
-		        {% if attributes.item_links %}<th></th>{% endif %}
-				</tr>
-			</thead>	
-		
+		    {% if attributes.headings %}
+    		    <thead>
+    		    	<tr>
+    			    {% for name in attributes.headings %}
+    		            <th class="text-center">{{ name }}</th>
+    		    	{% endfor %}
+    				</tr>
+    			</thead>	
+            {% endif %}
+            		
 			<tbody>
 			    {% for object in object_list %}
 				    <tr>
-				        {% for name,value in object|field_titles_and_values:attributes %}
-			        		<td>
-			        			{% include value_widget %}
+				        {% for item in object %}
+			        		<td class="text-center">
+			        		    {% if item.widget %}
+                                    {% include item.widget with object_list=item.object_list attributes=item.attributes %}
+                                {% else %}
+                                    {{ item }}
+                                {% endif %}
 							</td>
 						{% endfor %}
-			
-			            {% if attributes.item_links %}
-			            	<td>
-								{% for lnk in attributes.item_links %}
-									<a href="{% url lnk.url object.pk %}" {% if lnk.class %}class="{{ lnk.class }}"{% endif %}>
-										{{ lnk.label }}
-									</a>
-								{% endfor %}
-							</td>
-						{% endif %}
 					</tr>
 				{% endfor %}
 			</tbody>
