--- a/simplecrud/templates/simplecrud/base.html
+++ b/simplecrud/templates/simplecrud/base.html
@@ -30,7 +30,7 @@
 		<a href="{% url 'contact_us' %}">Contact us</a> if you'd like more information.
 	</noscript>
 
-    <div class="container">
+    <div class={% if simplecrud.container %}{{ simplecrud.container }}{% else %}"container"{% endif %}>
         {% block content %}{% endblock %}
     </div>
     
